# youtube-intake-service

./: .gitattributes  .gitignore  LICENSE  README.de.md  README.md  build.py  main.py  pyproject.toml  requirements.txt  service.info.example
.github/: FUNDING.yml
src/youtube_intake_core/: __init__.py  errors.py  extraction.py  formatting.py  markdown.py
src/youtube_intake_server/: __init__.py  app.py  daemon.py
tests/: test_import_purity.py  test_main.py
